# convolution

./: CMakeLists.txt  README.md
docs/: Doxyfile.in
src/: CMakeLists.txt
src/convolution/core/: CMakeLists.txt  Convolver.cpp  Convolver.h  Convolver.inl  Filter.h  Filter.inl  ImageReader.cpp  ImageReader.h  MatrixMultiplication.h  MatrixTranspose.h  logging.h  math.h
src/convolution/core/tests/: ConvolverTest.cpp  FilterTest.cpp  ImageReaderTest.cpp  MathTest.cpp  MatrixMultiplicationTest.cpp  MatrixTransposeTest.cpp  TestResources.h
src/convolution/io/: CMakeLists.txt  Image.cpp  Image.h  Image.inl
src/convolution/io/tests/: ImageTest.cpp
